# ci-cd-example

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: ci.yaml
include/: mylib.h
src/: mylib.c
test/: test.c
